# Patch-Hive

./: .env.docker  .env.example  .gitignore  .mcp.json  .renderignore  .replit  .zipignore  ABX_RUNES_REPORT.md  ADMIN_AUDIT_LOG.md  ADMIN_IMPLEMENTATION.md  AI_CONTEXT.md  CANON_DIFF.md  CANON_SYNC.md  CHANGELOG.md  COPY_COMPLIANCE.md  CURRENT_STATE.md  DASHBOARD_IMPLEMENTATION.md  DASHBOARD_STATE.md  DEPLOY_STATUS.md  Dockerfile.backend  Dockerfile.frontend  ENGINEERING_SETUP_REPORT.md  EXPORT_AUDIT_SUMMARY.md  Makefile  PR_DESCRIPTION.md  PUBLISHING_IMPLEMENTATION.md  README.md  README_REPLIT.md  REFERRAL_IMPLEMENTATION.md  STRIPE_INTEGRATION_PROMPT.md  STUB_REPORT.md  SYSTEM_CONTEXT.md  azure.yaml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  justfile  render.yaml  replit.nix  sgconfig.yml  (+2 more)
backend/: .dockerignore  BOOTSTRAP_LOG.md  CATALOG_ARCHITECTURE.md  DATA_SOURCES.md  Dockerfile  alembic.ini  docker-entrypoint.sh  fly.toml  main.py  nixpacks.toml  pyproject.toml  requirements.txt  seed_data.py  setup_replit.sh
backend/account/: __init__.py  models.py  routes.py  schemas.py  services.py
backend/admin/: __init__.py  dependencies.py  models.py  routes.py  schemas.py  utils.py
backend/alembic/: env.py
backend/alembic/versions/: 20240919_legacy_foundation.py  20240920_add_monetization_and_referrals.py  (+16 more)
backend/canon/: __init__.py  compiler.py  contracts.py  downloads.py  entitlements.py  export_pack.py  exports.py  fulfillment.py  function_registry.py  gallery_revisions.py  inventory.py  inventory_persist.py  models.py  pipeline.py  query_surface.py  repository.py  routes.py  runes.py  style_recipes.py  visual_contracts.py
backend/cases/: __init__.py  catalog_routes.py  catalog_schemas.py  catalog_service.py  compatibility.py  compatibility_schemas.py  materialize.py  models.py  routes.py  schemas.py  source_policy.py
backend/community/: __init__.py  auth.py  auth_routes.py  models.py  routes.py  schemas.py
backend/core/: __init__.py  abrexport.py  config.py  database.py  discovery.py  ers.py  ir.py  naming.py  provenance.py  runes.py  security.py
backend/evidence/: __init__.py  cloud_provider.py  evaluation.py  images.py  reconciliation.py  retention.py  routes.py  vision_provider.py
backend/export/: __init__.py  pdf.py  routes.py  visualization.py  waveform.py
backend/gallery/: models.py
backend/ingest/: __init__.py  example_system_pack_usage.py  modulargrid.py  system_packs.py
backend/integrations/: README.md  __init__.py  bootstrap.py  case_catalog_populator.py  catalog_populator.py  modulargrid_data.py  modulargrid_importer.py  router.py  synth_catalog_data.py  synth_catalog_importer.py
backend/leaderboards/: __init__.py  routes.py
backend/modules/: __init__.py  catalog.py  catalog_routes.py  models.py  routes.py  schemas.py
backend/monetization/: __init__.py  credits.py  models.py  referrals.py  routes.py  schemas.py
backend/patches/: __init__.py  engine.py  inventory_gate.py  models.py  routes.py  schemas.py
backend/patchhive/: README.md  __init__.py  schemas.py  schemas_library.py
backend/publishing/: __init__.py  models.py  routes.py  schemas.py  utils.py
backend/racks/: __init__.py  catalog_compatibility.py  models.py  routes.py  schemas.py  validation.py
backend/registry/: __init__.py  models.py  routes.py  services.py
backend/runs/: bridge.py  listing.py  models.py  routes.py  schemas.py
backend/scripts/: seed_catalog_from_synth.py
backend/tests/: README.md  __init__.py  conftest.py  monorepo_paths.py  test_case_catalog_api.py  test_case_catalog_compatibility.py  test_case_catalog_materialize.py  test_case_catalog_populator.py  test_catalog_place_loop_simulation.py  test_module_catalog_materialize.py  test_naming_rules.py  test_naming_seed.py  test_patchbook_api.py  test_patchbook_unit.py  test_rack_catalog_compatibility.py  test_rack_dual_gate.py  test_schema_roundtrip.py  test_synth_catalog.py  test_system_pack_import.py
(+621 files in other folders)
