[project]
name = "patchhive-backend"
version = "0.1.0"
description = "PatchHive Backend - Eurorack system design and patch exploration API"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "fastapi==0.139.2",
    "uvicorn[standard]==0.51.0",
    "sqlalchemy==2.0.51",
    "alembic==1.18.5",
    "psycopg2-binary==2.9.12",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "PyJWT==2.13.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.32",
    "email-validator==2.3.0",
    "httpx==0.28.1",
    "pyyaml==6.0.3",
    "reportlab==5.0.0",
    "svglib==2.0.2",
    "pillow==12.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "pytest-asyncio==1.4.0",
    "httpx==0.28.1",
    "testcontainers==4.14.2",
    "black==26.5.1",
    "ruff==0.15.22",
    "mypy==2.3.0",
    "hypothesis==6.157.1",
    "pip-audit==2.10.1",
    "cyclonedx-bom==7.3.0",
    "bandit==1.9.4",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "canon",
    "core",
    "evidence",
    "racks",
    "cases",
    "export",
    "ingest",
    "patches",
    "modules",
    "community",
    "patchhive",
    "patchhive.abraxas",
    "patchhive.cli",
    "patchhive.fixtures",
    "patchhive.export",
    "patchhive.gallery",
    "patchhive.ops",
    "patchhive.pipeline",
    "patchhive.registry",
    "patchhive.render",
    "patchhive.templates",
]

[tool.black]
line-length = 100
target-version = ['py311']
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
# Default discovery: product tests + narrow rune contract tests.
# Package-internal corpus (patchhive/tests) is quarantined — run via `just test-historical`.
testpaths = ["tests", "patchhive/runes/tests"]
norecursedirs = [
    ".*",
    "build",
    "dist",
    "CVS",
    "_darcs",
    "{arch}",
    "*.egg",
    "venv",
    ".venv",
    "patchhive/tests",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "legacy_pipeline: imports historical backend/patchhive package (not canon MVP)",
    "historical_package: package-internal tests under patchhive/tests (quarantined)",
]
